fix animation on safari

--- a/packages/ui/src/styles/animations.css
+++ b/packages/ui/src/styles/animations.css
@@ -20,6 +20,8 @@
     opacity: 0;
     filter: blur(10px);
     transform: translateY(20px);
+    
+    will-change: transform, opacity, filter;
   }
  
   .delay-1 {
